SA-07-Add modal component

--- a/src/lib/styles/global.vars.scss
+++ b/src/lib/styles/global.vars.scss
@@ -13,7 +13,7 @@
 	--main-background-color: #2c2b2b;
 	--main-text-color: #eeeeee;
 	--main-second-text-color: #a2a2a2;
-	--main-background-color: #202020;
+	// --main-background-color: #202020;
 	--main-second-background-color: #fff;
 	--main-accent-color: rgb(8, 97, 91);
 	--main-alert-color: rgb(193, 71, 71);
