--- a/src/lib/styles/global.vars.scss
+++ b/src/lib/styles/global.vars.scss
@@ -12,11 +12,9 @@
 	// colors
 	--main-background-color: #2c2b2b;
 	--main-text-color: #eeeeee;
-	--main-second-text-color: #a2a2a2;
-	// --main-background-color: #202020;
+	--main-second-text-color: #d1d0d0;
 	--main-second-background-color: #fff;
-	--main-accent-color: rgb(8, 97, 91);
-	--main-alert-color: rgb(193, 71, 71);
+	--main-alert-color: #de1324;
 	--main-input-color: #222;
 
 	//https://codepen.io/sosuke/pen/Pjoqqp
