AD-16-Add RWD for main page ui && move textArea to separate component

--- a/src/lib/styles/global.scss
+++ b/src/lib/styles/global.scss
@@ -88,6 +88,54 @@ p {
 li {
 	font-size: var(--font-size-li);
 }
+
+@media (max-width: 700px) {
+	h1 {
+		font-size: calc(var(--font-size-h1) - 10px);
+	}
+	h2 {
+		font-size: calc(var(--font-size-h2) - 10px);
+	}
+	h3 {
+		font-size: calc(var(--font-size-h3) - 5px);
+		font-weight: 500;
+	}
+	h4 {
+		font-size: calc(var(--font-size-h4) - 3px);
+		font-weight: 500;
+	}
+	h5 {
+		font-size: var(--font-size-h5);
+		// font-weight: 500;
+	}
+	p {
+		font-size: calc(var(--font-size-p) - 1px);
+		margin: 0;
+		padding: 0;
+	}
+}
+
+@media (max-width: 600px) {
+	h1 {
+		font-size: calc(var(--font-size-h1) - 26px);
+		line-height: calc(var(--font-size-h1) - 26px);
+	}
+
+	h3 {
+		font-size: calc(var(--font-size-h3) - 6px);
+		font-weight: 500;
+	}
+	h4 {
+		font-size: calc(var(--font-size-h4) - 4px);
+		font-weight: 500;
+	}
+
+	p {
+		font-size: calc(var(--font-size-p) - 2px);
+		margin: 0;
+		padding: 0;
+	}
+}
 button {
 	cursor: pointer;
 	outline: none;
